--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="pricing10_content-top">
               <div class="margin-bottom margin-medium">
                 <div class="text-align-center">
-                  <div class="heading-xsmall">PRO</div>
+                  <div class="heading-xsmall">HEY + MAGIC</div>
                   <div class="margin-vertical margin-xxsmall">
                     <div class="heading-xxlarge">$100<span class="heading-medium">/m</span></div>
                   </div>
